Fix the logo spacing

--- a/qtify/src/components/Navbar/navbar.module.css
+++ b/qtify/src/components/Navbar/navbar.module.css
@@ -3,9 +3,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
     justify-content: space-between;
     height: 4.625rem;
     align-items: center;
-    padding: 0 32px;
+    padding: 0px 30px;
 }
